[package]
name = "bevy_native_websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
serde = { version = "1.0.214", features = ["derive", "rc"] }
base64 = "0.22.1"
chrono = "0.4.38"
serde_json = "1.0.132"
dotenv = "0.15.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mio = { version = "1.0.2", default-features = false, features = ["net", "os-poll"] }
url = { version = "2.5.2", default-features = true }
crossbeam-channel = "0.5.13"
tungstenite = { version = "0.24.0", features = ["http", "handshake"] }
native-tls = '0.2.12'

